# cv2ext

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  test.py
.github/workflows/: black.yaml  build-check.yaml  mypy.yaml  release-publish.yaml  ruff.yaml  test-publish.yaml  unittests-macos.yaml  unittests-ubuntu.yaml  unittests-windows.yaml
benchmarks/: README.md  benchmark.py  common.py  framepack.py  iou.py  ncc.py  nms.py  run.py  run.sh
benchmarks/code/: __init__.py  _utils.py  both.py  naive.py  read.py  show.py
benchmarks/ncc/: benchmark.py  run.py
benchmarks/visual/: benchmark.py  run.py
ci/: make_stubs.py  mypy.sh  run_tests.bat  run_tests.sh
data/: codecs.html
docs/: api.rst  conf.py  examples.rst  index.rst  installation.rst  requirements.txt  usage.rst
docs/examples/: display.rst  iterable_video.rst  video_writer.rst  video_writer_fourcc.rst
docs/examples/bboxes/: iou.rst  meanap.rst  nms.rst
docs/examples/image/: draw.rst  tiling.rst
docs/examples/io/: display.rst  iterable_video.rst  video_writer.rst  video_writer_fourcc.rst  write_and_display.rst
docs/examples/metrics/: ncc.rst
docs/examples/template/: match_multiple.rst  match_single.rst
docs/examples/tracking/: csk.rst  multi_tracker.rst  tracker.rst
docs/source/: cv2ext.bboxes.filters.rst  cv2ext.bboxes.rst  cv2ext.cli.annotate.rst  cv2ext.cli.convert_annotations.rst  cv2ext.cli.convert_video_color.rst  cv2ext.cli.resize_image.rst  cv2ext.cli.resize_video.rst  cv2ext.cli.rst  cv2ext.cli.timeline.rst  cv2ext.cli.video_from_images.rst  cv2ext.detection.rst  cv2ext.image.rst  cv2ext.io.rst  cv2ext.metrics.rst  cv2ext.rst  cv2ext.template.rst  cv2ext.tracking.cv_trackers.rst  cv2ext.tracking.rst  cv2ext.tracking.trackers.rst  cv2ext.video.rst  cv2tools.rst  modules.rst
examples/: README.md  display.py  iterable_video.py  video_writer_fourcc.py  webcam.py
examples/bboxes/: iou.py  meanap.py  nms.py
examples/bboxes/filters/: kalman.py
examples/detection/: frame_packing.py
examples/image/: draw.py  tiling.py
examples/io/: display.py  iterable_video.py  video_writer.py  video_writer_fourcc.py  webcam.py  write_and_display.py
examples/metrics/: ncc.py
examples/template/: match_multiple.py  match_single.py
examples/tracking/: csk.py  multi_tracker.py  tracker.py
scripts/: parse_codec.py
src/cv2ext/: __init__.py  __main__.py  _display.py  _flags.py  _fourcc.py  _iterablevideo.py  _jit.py  _writer.py
src/cv2ext/_cli/: __init__.py
src/cv2ext/bboxes/: __init__.py  _algorithms.py  _bounding.py  _constrain.py  _convert.py  _distance.py  _draw.py  _iou.py  _kalman.py  _mean_ap.py  _nms.py  _resize.py  _scale.py  _score.py  _valid.py
src/cv2ext/camera/: __init__.py  _intrinsics.py
src/cv2ext/cli/: __init__.py
src/cv2ext/datasets/: __init__.py  coco.py  kitti.py  mot.py
src/cv2ext/detection/: __init__.py  _blob.py  _draw.py  _packer.py
src/cv2ext/fft/: __init__.py  _fft.py
src/cv2ext/image/: __init__.py  _augment.py  _color.py  _divide.py  _scale.py  _tiling.py  color.py  draw.py
src/cv2ext/io/: __init__.py  _display.py  _fourcc.py  _iterablevideo.py  _webcam.py  _writer.py
src/cv2ext/jitfuncs/: __init__.py  _metrics.py
src/cv2ext/kalman/: __init__.py  _kalman.py  (+2 more)
src/cv2tools/: __init__.py  _iterablevideo.py
tests/: helpers.py  test_read.py  test_same.py
tests/bboxes/: __init__.py  test_bounding.py  test_constrain.py  test_convert.py  test_distance.py  test_filter_region.py  test_iou.py  test_kalman.py  test_match.py  test_meanap.py  test_nms.py  test_resize.py  test_score.py  test_valid.py  test_within.py
tests/detection/: test_packing.py
tests/display/: __init__.py  test_stress.py  test_update.py
tests/fft/: __init__.py  test_np_cv_shape.py
tests/image/: test_divide.py  test_patch.py  test_rescale.py
tests/io/: __init__.py
tests/iterable_video/: __init__.py  _utils.py  test_read.py  test_same.py  test_sequential.py
tests/kalman/: test_create_system.py  test_kernels.py
tests/metrics/: __init__.py  test_ncc.py  test_ncc_jit.py  test_ncc_parity.py
tests/mot/: test_sort.py
tests/template/: __init__.py  test_multiple.py  test_multiple_jit.py  test_single.py
tests/tracking/: generic.py  test_boosting.py  test_kcf.py  test_medianflow.py  test_mosse.py  test_multi_tracker.py  test_tracker.py  test_tracker_type.py
typings/: README.md
typings/numba/: __init__.pyi  __main__.pyi  extending.pyi
(+383 files in other folders)
